// Copyright Â© 2019 The Things Network Foundation, The Things Industries B.V.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "github.com/envoyproxy/protoc-gen-validate/validate/validate.proto";

package ttn.lorawan.v3;

option go_package = "go.thethings.network/lorawan-stack/pkg/ttnpb";

message Picture {
  message Embedded {
    // MIME type of the picture.
    string mime_type = 1;
    // Picture data. A data URI can be constructed as follows:
    // `data:<mime_type>;base64,<data>`.
    bytes data = 2;
  }

  // Embedded picture.
  // Omitted if there are external URLs available (in sizes).
  Embedded embedded = 1;

  // URLs of the picture for different sizes, if available on a CDN.
  map<uint32,string> sizes = 2 [(validate.rules).map.values.string.uri_ref = true];
}
